--- a/public/admin/assets/css/app.css
+++ b/public/admin/assets/css/app.css
@@ -926,10 +926,10 @@ body[data-layout="horizontal"][data-layout-size="boxed"] .container-fluid {
 
 /*!
  * Waves v0.7.6
- * http://fian.my.id/Waves 
- * 
- * Copyright 2014-2018 Alfiana E. Sibuea and other contributors 
- * Released under the MIT license 
+ * http://fian.my.id/Waves
+ *
+ * Copyright 2014-2018 Alfiana E. Sibuea and other contributors
+ * Released under the MIT license
  * https://github.com/fians/Waves/blob/master/LICENSE */
 .waves-effect {
   position: relative;
@@ -1176,6 +1176,21 @@ body[data-layout="horizontal"][data-layout-size="boxed"] .container-fluid {
 .alert-outline-purple {
   border: 1px solid #d5c8ed;
   color: #6f42c1; }
+
+.alert-soft-blue {
+    color: #3687e4;
+    background-color: rgba(54, 135, 228, 0.05);
+    border-color: #c7ddf7;
+  }
+
+.alert-soft-blue hr {
+    border-top-color: #b1cff4;
+  }
+
+.alert-soft-blue .alert-link {
+    color: #1b6dcc;
+  }
+
 
 .font-size-11 {
   font-size: 11px !important; }
@@ -2401,7 +2416,7 @@ input[switch="dark"]:checked + label {
   .square-switch input[switch] + label, .square-switch input[switch] + label:after {
     border-radius: 4px; }
 
-/* 
+/*
 Datatable
 */
 .table-bordered {
