--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4581,6 +4581,7 @@ input[type=button].btn-block {
   background-color: transparent;
   border: 1px solid transparent;
   border-radius: 0.25rem;
+  color: #ffffff;
 }
 
 .navbar-toggler:hover,
